<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_view"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/back_row"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/img_photo_row"
        android:layout_width="70dp"
        android:layout_height="70dp"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@color/teal_700"
        android:contentDescription="@string/deskripsi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judul_masakan_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:fontFamily="@font/quicksandbold"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/judul_masakan"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/by"/>

            <TextView
                android:id="@+id/user_name_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textSize="12sp"
                app:fontFamily="@font/quicksandbold"
                android:text="@string/nama_user"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:id="@+id/five_star_row"
                    android:layout_marginTop="3dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <TextView
                    android:id="@+id/ratting_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:paddingTop="1dp"
                    android:textSize="12sp"
                    android:text="@string/rattings"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/baseline_remove_red_eye_black_24dp"
                    app:tint="@color/teal_700"
                    android:contentDescription="@string/images_food"/>

                <TextView
                    android:id="@+id/views_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/views_count"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>