<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-20dp"
        app:cardCornerRadius="20dp"
        android:background="@drawable/back_profile">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="-120dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:cardCornerRadius="8dp"
                android:background="@drawable/back_profile_photo"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/user"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:fontFamily="@font/quicksandbold"
                android:text="@string/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/line"
                android:textSize="12sp"
                android:text="@string/username"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@drawable/underline"
                android:layerType="software"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/deskripsi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/post_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:padding="2dp"
                        android:background="@drawable/back_icon"
                        app:tint="@color/teal_700"
                        android:src="@drawable/baseline_post_add_black_24dp"
                        android:contentDescription="@string/deskripsi"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="@font/quicksandbold"
                            android:textSize="14sp"
                            android:text="@string/zero"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-2dp"
                            android:textColor="@color/line"
                            android:text="@string/post"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/favorite_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:padding="2dp"
                        android:background="@drawable/back_icon"
                        app:tint="@color/teal_700"
                        android:src="@drawable/baseline_favorite_border_black_24dp"
                        android:contentDescription="@string/deskripsi"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="@font/quicksandbold"
                            android:textSize="14sp"
                            android:text="@string/favorite_count"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-2dp"
                            android:textColor="@color/line"
                            android:text="@string/favorite"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_empty"/>

    </LinearLayout>

</LinearLayout>