<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center"
    android:background="@drawable/back_card"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/coastal"
        android:padding="7dp">

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:background="@drawable/back_img">

            <ImageView
                android:id="@+id/img_card_photo"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:background="@color/teal_700"
                tools:src="@tools:sample/avatars"
                android:layout_gravity="center"
                android:contentDescription="@string/images_food" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul_masakan_card"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/judul_masakan"
                app:fontFamily="@font/quicksandbold"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by"/>

                <TextView
                    android:id="@+id/user_name_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    app:fontFamily="@font/quicksandbold"
                    android:text="@string/nama_user"/>

            </LinearLayout>

            <TextView
                android:id="@+id/desskripsi_card"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="28dp"
                android:background="@drawable/back_ratting"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:layout_marginTop="3dp"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <ImageView
                    android:id="@+id/five_star_card"
                    android:layout_marginTop="3dp"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/images_food" />

                <TextView
                    android:id="@+id/ratting_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:paddingTop="2dp"
                    android:text="@string/rattings"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/baseline_remove_red_eye_black_24dp"
                        app:tint="@color/teal_700"
                        android:contentDescription="@string/images_food"/>

                    <TextView
                        android:id="@+id/views_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/views_count"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/baseline_chat_bubble_black_24dp"
                        app:tint="@color/teal_700"
                        android:contentDescription="@string/images_food"/>

                    <TextView
                        android:id="@+id/comments_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/comment_count"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/baseline_share_black_24dp"
                        app:tint="@color/teal_700"
                        android:contentDescription="@string/images_food"/>

                    <TextView
                        android:id="@+id/shared_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/share_count"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>